--- a/app/src/main/res/layout/add_advice_fragment.xml
+++ b/app/src/main/res/layout/add_advice_fragment.xml
@@ -17,15 +17,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="20sp"
+            android:layout_margin="8sp"
             android:orientation="vertical"
-
+            android:layout_weight="1"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="12dp"
                 android:text="@string/author_name" />
 
             <EditText
