--- a/app/src/main/res/layout/start_fragment.xml
+++ b/app/src/main/res/layout/start_fragment.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.StartFragment"
-    android:background="@color/background">
+    android:background="@color/background"
+    tools:context=".ui.StartFragment">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/frameLayout"
