--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,8 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="moe.dreameh.assignment1.MainActivity"
-    app:showAsAction="ifRoom">
+    xmlns:tools="http://schemas.android.com/tools"
+    app:showAsAction="ifRoom"
+    tools:context="moe.dreameh.assignment1.MainActivity">
 
     <item
         android:id="@+id/settings_menu"
