Semi-added Room capabilities, (auto-save)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="content">#2e3440</color>
     <color name="author">#222222</color>
     <color name="category">#455A64</color>
-    <color name="background">#eceff4</color>
+    <color name="background">#FFF</color>
 </resources>
