--- a/app/src/main/res/navigation/nav_fragments.xml
+++ b/app/src/main/res/navigation/nav_fragments.xml
@@ -13,6 +13,9 @@
             android:id="@+id/action_startFragment_to_addAdviceFragment"
             app:destination="@id/addAdviceFragment"
             app:enterAnim="@anim/nav_default_enter_anim" />
+        <action
+            android:id="@+id/action_startFragment_to_settingsFragment2"
+            app:destination="@id/settingsFragment2" />
     </fragment>
 
     <fragment
@@ -23,7 +26,23 @@
         <action
             android:id="@+id/action_addAdviceFragment_to_startFragment"
             app:destination="@id/startFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@+id/startFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_addAdviceFragment_to_settingsFragment2"
+            app:destination="@id/settingsFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/settingsFragment2"
+        android:name="moe.dreameh.assignment1.SettingsFragment"
+        android:label="SettingsFragment">
+        <action
+            android:id="@+id/action_settingsFragment2_pop"
+            app:popUpTo="@id/settingsFragment2"
             app:popUpToInclusive="true" />
     </fragment>
 </navigation>
