--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,21 +1,20 @@
-<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<?xml version="1.0" encoding="utf-8"?>
+<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="@string/basic_header">
+    <EditTextPreference
+        app:key="author"
+        app:title="@string/author_name"
+        app:defaultValue="@string/default_author"
+        app:useSimpleSummaryProvider="true"
+        app:iconSpaceReserved="false"
+        />
 
-        <EditTextPreference
-            app:key="author_title"
-            app:title="@string/author_title"
-            app:useSimpleSummaryProvider="true" />
+    <ListPreference
+        app:key="default_category"
+        app:title="@string/default_category"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true"
+        app:iconSpaceReserved="false"
+        />
 
-        <ListPreference
-            android:defaultValue="1"
-            android:entries="@array/categories"
-            android:entryValues="@array/categories"
-            android:key="category_preference"
-            android:title="Select default category"
-            app:useSimpleSummaryProvider="true"/>
-
-    </PreferenceCategory>
-
-</androidx.preference.PreferenceScreen>
+</PreferenceScreen>
