Testing working API, refactored most of the code in order to make it a tad more clean

--- a/app/src/main/res/layout/start_fragment.xml
+++ b/app/src/main/res/layout/start_fragment.xml
@@ -48,6 +48,13 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
+
+            <Button
+                android:id="@+id/refresh_button"
+                android:text="@string/refresh_button"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
