--- a/app/src/main/res/layout/start_fragment.xml
+++ b/app/src/main/res/layout/start_fragment.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
             <Button
                 android:id="@+id/refresh_button"
