Refactored the coroutines

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -17,4 +17,12 @@
         app:iconSpaceReserved="false"
         />
 
+    <ListPreference
+        app:key="default_sync"
+        app:title="@string/default_sync"
+        app:defaultValue="0"
+        app:useSimpleSummaryProvider="true"
+        app:iconSpaceReserved="false"
+        />
+
 </PreferenceScreen>
