--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,47 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <fragment
-        android:id="@+id/fragment1"
+        android:id="@+id/showFragment"
         android:name="moe.dreameh.lunchlista.ui.ShowFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fragment2"
+        app:layout_constraintEnd_toStartOf="@+id/settingsFragment"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="30sp"/>
+        android:layout_marginBottom="0sp"/>
 
     <fragment
-        android:id="@+id/fragment2"
+        android:id="@+id/settingsFragment"
         android:name="moe.dreameh.lunchlista.ui.SettingsFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-
+        android:layout_marginBottom="0sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/fragment1"
+        app:layout_constraintStart_toEndOf="@+id/showFragment"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="30sp"/>
+        app:layout_constraintVertical_bias="1.0" />
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
         android:background="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_nav_menu"/>
+        app:menu="@menu/bottom_nav_menu"
+        tools:layout_editor_absoluteX="0dp"
+        android:visibility="gone"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
