--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -1,4 +1,4 @@
-<LinearLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -6,4 +6,4 @@
             android:id="@+id/settings"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-</LinearLayout>
+</FrameLayout>
