--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,13 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-            android:id="@+id/navigation_home"
+            android:id="@+id/show_fragment"
             android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/title_home"/>
 
     <item
-            android:id="@+id/navigation_dashboard"
+            android:id="@+id/settings_fragment"
             android:icon="@drawable/ic_settings_black_24dp"
             android:title="@string/settings_title"/>
-
 </menu>
