--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -14,41 +14,58 @@
   ~ limitations under the License.
   -->
 
-<androidx.preference.PreferenceScreen
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-            app:title="@string/messages_header">
-
-        <EditTextPreference
-                app:key="signature"
-                app:title="@string/signature_title"
-                app:useSimpleSummaryProvider="true"/>
-
-        <ListPreference
-                app:key="reply"
-                app:title="@string/reply_title"
-                app:entries="@array/reply_entries"
-                app:entryValues="@array/reply_values"
-                app:defaultValue="reply"
-                app:useSimpleSummaryProvider="true"/>
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-            app:title="@string/sync_header">
+            app:title="@string/sync_header"
+            app:iconSpaceReserved="false">
 
         <SwitchPreferenceCompat
                 app:key="sync"
-                app:title="@string/sync_title"/>
+                app:title="@string/sync_title"
+                app:iconSpaceReserved="false"/>
 
-        <SwitchPreferenceCompat
+        <EditTextPreference
                 app:key="attachment"
                 app:title="@string/attachment_title"
                 app:summaryOn="@string/attachment_summary_on"
                 app:summaryOff="@string/attachment_summary_off"
-                app:dependency="sync"/>
+                app:dependency="sync"
+                app:iconSpaceReserved="false"/>
 
     </PreferenceCategory>
+
+    <PreferenceCategory
+        app:title="Misc"
+        app:iconSpaceReserved="false">
+
+    <Preference
+        android:selectable="false"
+        android:enabled="true"
+        android:key="build_version"
+        android:title="Version"
+        android:summary=""
+        app:iconSpaceReserved="false"/>
+
+        <Preference
+            android:selectable="false"
+            android:enabled="true"
+            android:key="build_version_code"
+            android:title="Build Code"
+            android:summary=""
+            app:iconSpaceReserved="false"/>
+
+
+    <Preference
+        android:selectable="true"
+        android:enabled="true"
+        android:key="about"
+        android:title="Om applikationen"
+        app:iconSpaceReserved="false"
+        />
+    </PreferenceCategory>
+
+
 
 </androidx.preference.PreferenceScreen>
