--- a/app/src/main/res/layout/show_fragment.xml
+++ b/app/src/main/res/layout/show_fragment.xml
@@ -43,10 +43,10 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="45dp"
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="50sp"/>
+            android:layout_marginTop="45dp"
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="0dp"/>
 
 </FrameLayout>
